Tue Oct 21 22:24:39 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * tests/DCPS/BuiltInTopicTest/mySvc.conf:
        
          Updated the service name.

Tue Oct 21 22:05:28 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/transport/simpleTCP/SimpleTcp.cpp:

          Removed a duplicate header.

        * dds/InfoRepo/DCPSInfoRepoServ.cpp:

          Added includes to load service for static build.

        * dds/InfoRepo/PersistenceUpdater.h:
        * dds/InfoRepo/PersistenceUpdater.cpp:

          Added Loader class for static intializing and
          loading service.

        * tests/DCPS/Prst_delayed_subscriber/mySvc.conf:

          Updated the service name.

Tue Oct 21 20:00:02 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * bin/dcps_tests.lst:

          Added Federation test.

        * dds/InfoRepo/DCPSInfoRepoServ.cpp:

          Fixed a warning.

Tue Oct 21 18:53:07 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * dds/InfoRepo/DCPS_IR_Domain.cpp:

          Eliminated a warning when built_in_topics=0.

Mon Oct 20 22:08:36 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>

        * DDS_release_notes.txt:

          Added short description of new dcps_ts.pl command line
          argument.

Mon Oct 20 21:51:30 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * DDS_release_notes.txt:

          Updated release notes with DCPSInfoRepo changes.

Mon Oct 20 18:03:31 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/Service_Participant.cpp:
        * dds/InfoRepo/DCPSInfoRepo.cpp:
        * dds/InfoRepo/DCPSInfoRepoServ.h:
        * dds/InfoRepo/DCPSInfoRepoServ.cpp:
        * dds/InfoRepo/DCPSInfo_i.cpp:

          DCPSInfoRepo refactorings:

          - DCPSInfoRepo will no longer abort on an invalid Transport
            configuration.
          - Added catch all to DCPSInfoRepoServ::init to ensure
            failed initialization cleans up state correctly.