@@ -1,7 +1,17 @@
+Tue Oct 21 23:22:55 UTC 2008  Yan Dai  <dai_y@ociweb.com>
+
+        * dds/InfoRepo/DCPS_IR_Domain.cpp:
+        
+          Fixed a warning.
+          
+        * dds/InfoRepo/PersistenceUpdater.h:
+
+          Added missing includes.
+          
 Tue Oct 21 22:24:39 UTC 2008  Yan Dai  <dai_y@ociweb.com>
 
         * tests/DCPS/BuiltInTopicTest/mySvc.conf:
-        
+
           Updated the service name.
 
 Tue Oct 21 22:05:28 UTC 2008  Yan Dai  <dai_y@ociweb.com>
